--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -7,3 +7,15 @@
 
 "Vision":
   color: "#009f36"
+
+"OFC":
+  color: "#f29105"
+
+"ECOC":
+  color: "#f29105"
+
+"JOCN":
+  color: "#f29105"
+
+"JLT":
+  color: "#f29105"
