updated badge color

--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -12,13 +12,13 @@
   color: "#b509ac"
 
 "Wireless":
-  color: "#0072ce"
+  color: "#2698ba"
 
 "Optics":
   color: "#f29105"
 
 "AI/ML":
-  color: "#2e7d32"
+  color: "#00ab37"
 
 "Systems":
-  color: "#455a64"
+  color: "#f92080"
